# SC20-YASKSITE-AD

./: README.md  config_clx.tune  config_rome.tune
bench/: OMP_BARRIER_CascadelakeSP_Gold-6248_icc19.0.2.187.bench  OMP_BARRIER_Zen_ROME-7452_icc19.0.2.187.bench
impls/pirk/: A.impl  A_ys.impl  F.impl  F_ys.impl
ivps/: Heat3D.ivp  Wave3D_radius2.ivp  Wave3D_radius4.ivp
ivps/yasksite_stencils/: Heat3D_offsite.hpp  Heat_offsite.hpp  Wave3D_offsite.hpp  Wave_offsite.hpp
kernels/pirk/: Approx.kernel  LC.kernel  RHS.kernel  RHS_Approx_Update.kernel  RHS_LC.kernel  Update.kernel  ys_Approx.kernel  ys_LC.kernel  ys_RHS.kernel  ys_RHS_Approx_Update.kernel  ys_RHS_LC.kernel  ys_RHS_LC_predictor.kernel  ys_RHS_predictor.kernel  ys_Update.kernel
machines/: CascadelakeSP_Gold-6248.yml
mc_state/: CLX.txt  ROME.txt
methods/implicit/: radauIIA7.ode
run_variant/YaskSite/impl_variants/: ys_A_il.cpp
run_variant/YaskSite/yaskSite/: CMakeLists.txt  offsite_helper.cpp
run_variant/YaskSite/yaskSite/impl_variants/: ys_F_il.cpp
run_variant/YaskSite/yaskSite/include/: offsite_helper.h
run_variant/yaskSite/: offsite_run_parse.cpp
run_variant/yaskSite/impl_variants/: ys_A_li.cpp  ys_C_il.cpp
run_variant/yaskSite/include/: offsite_run_parse.h
